[fix] Add ElasticSearch vessels indexation, and strategies load opt-in for OBSMER [fix] Filter strategy using APPLIED_PERIOD.END_DATE + 1 day (see issue sumaris-app#500)